Show the icon for the typed in credit card in editor

BUG=657178

Review-Url: https://codereview.chromium.org/2442933003
Cr-Commit-Position: refs/heads/master@{#428359}

Former-commit-id: 7f1a60f6847ee8063df797738a37b9ab299026d5