chrome/browser/autofill/android/personal_data_manager_android.cc
@@ -496,18 +496,21 @@ void PersonalDataManagerAndroid::UpdateServerCardBillingAddress(
   personal_data_manager_->UpdateServerCardBillingAddress(card);
 }
 
-ScopedJavaLocalRef<jstring>
-PersonalDataManagerAndroid::GetBasicCardPaymentTypeIfValid(
+ScopedJavaLocalRef<jstring> PersonalDataManagerAndroid::GetBasicCardPaymentType(
     JNIEnv* env,
     const JavaParamRef<jobject>& unused_obj,
-    const JavaParamRef<jstring>& jcard_number) {
+    const JavaParamRef<jstring>& jcard_number,
+    const jboolean jempty_if_invalid) {
   base::string16 card_number = ConvertJavaStringToUTF16(env, jcard_number);
-  return ConvertUTF8ToJavaString(
-      env, IsValidCreditCardNumber(card_number)
-               ? data_util::GetPaymentRequestData(
-                     CreditCard::GetCreditCardType(card_number))
-                     .basic_card_payment_type
-               : "");
+
+  if (static_cast<bool>(jempty_if_invalid) &&
+      !IsValidCreditCardNumber(card_number)) {
+    return ConvertUTF8ToJavaString(env, "");
+  }
+  return ConvertUTF8ToJavaString(env,
+                                 data_util::GetPaymentRequestData(
+                                     CreditCard::GetCreditCardType(card_number))
+                                     .basic_card_payment_type);
 }
 
 void PersonalDataManagerAndroid::AddServerCreditCardForTest(
