chrome/browser/autofill/android/personal_data_manager_android.h
@@ -142,11 +142,12 @@ class PersonalDataManagerAndroid
       const base::android::JavaParamRef<jstring>& jbilling_address_id);
 
   // Returns the card type according to PaymentRequest spec, or an empty string
-  // if the given card number is not valid.
-  base::android::ScopedJavaLocalRef<jstring> GetBasicCardPaymentTypeIfValid(
+  // if the given card number is not valid and |jempty_if_invalid| is true.
+  base::android::ScopedJavaLocalRef<jstring> GetBasicCardPaymentType(
       JNIEnv* env,
       const base::android::JavaParamRef<jobject>& unused_obj,
-      const base::android::JavaParamRef<jstring>& jcard_number);
+      const base::android::JavaParamRef<jstring>& jcard_number,
+      const jboolean jempty_if_invalid);
 
   // Adds a server credit card. Used only in tests.
   void AddServerCreditCardForTest(
